k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: power-tycoon
  labels:
    app.kubernetes.io/name: power-tycoon
