k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: power-tycoon
  namespace: power-tycoon
  labels:
    app.kubernetes.io/name: power-tycoon
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: power-tycoon
